[project]
name = "fundi-alt"
version = "0.0.1"
description = "Alternative realisation of FunDIs injection mechanism"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fundi>=1.2.2",
]

[tool.pyright]
reportAny = false
reportCallInDefaultInitializer = false
ignore = [".venv"]

[tool.black]
line-length=100
